@@ -50,7 +50,11 @@ trap(struct trapframe *tf)
   case T_IRQ0 + IRQ_TIMER:
     if(cpuid() == 0){
       acquire(&tickslock);
-      ticks++;
+      ticks++;      
+      
+      if (myproc() && myproc()->state == RUNNING)
+        lru_update(myproc());
+      
       wakeup(&ticks);
       release(&tickslock);
     }
